----------
v4.2.9-git
----------

[mjr] Fix incorrectly populating email field when importing vCard (Bug #14046).


------
v4.2.8
------

[mjr] Fix issue where sidebar links point to incorrect address book.


------
v4.2.7
------

[jan] Fix error when removing user data.


------
v4.2.6
------

[jan] Don't try to load Content application if tags are disabled.
[mjr] Fix adding tags to new contacts (Bug #13884).
[jan] Fix waiting for replication on LDAP backend.


------
v4.2.5
------

[jan] Fix export format of tags to vCard 3.0 categories (Bug #13800).


------
v4.2.4
------

[jan] Use the SHOW permission to determine the sidebar address book list.


------
v4.2.3
------

[jan] Export nicer display names for users and resources via WebDAV.
[jan] Export custom owner and read-only properties via WebDAV.
[jan] Fix exporting contacts without __uid attributes via WebDAV.
[jan] Fix importing empty birthdays/anniversaries from vCard.
[mjr] Fix defaulting to the defined search fields when searching via the API.
[mjr] Fix broken EAS synchronization due to incorrect setting of the
      Categories field.


------
v4.2.2
------

[jan] Fix duplicate searching in address books without owner field.
[jan] Fix duplicate search form (woe@gmx.de, Bug #13528).
[mms] Make case-insensitive API e-mail search work on non-ASCII data (Request
      #12480).
[jan] Fix listing group members that contain colons in their IDs.


------
v4.2.1
------

[jan] Display correct address books in WebDAV folders.
[jan] Fix displayed CardDAV URLs for shared address books (Bug #12380).
[mms] Only include e-mail addresses that match the search string in the return
      from the search() API call (Request #12480).
[mjr] Fix exporting tags via vCard and ActiveSync (Bug #13393).
[mjr] Add EAS client created shares to the sync_books preference (Bug #13359).
[mjr] Add missing API support for searchTags API (Bug #13362).
[mjr] Fix issue that caused contacts to be tagged with a broken username.


------
v4.2.0