@@ -39,6 +39,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [jan] Fix inserting and updating photos with Oracle backends.
 * [mjr] Fix incorrectly populating email field when importing vCard (Bug #14046).
  </notes>
  <contents>
@@ -2020,6 +2021,7 @@
    <date>2015-07-31</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [jan] Fix inserting and updating photos with Oracle backends.
 * [mjr] Fix incorrectly populating email field when importing vCard (Bug #14046).
    </notes>
   </release>
