@@ -2,6 +2,7 @@
 v4.2.9-git
 ----------
 
+[jan] Fix inserting and updating photos with Oracle backends.
 [mjr] Fix incorrectly populating email field when importing vCard (Bug #14046).
 
 
